--- a/HardcoreCombat/i18n/default.json
+++ b/HardcoreCombat/i18n/default.json
@@ -10,5 +10,15 @@
   "settings.advancedDifficultyTitle": "Advanced",
   "settings.expertDifficultyTitle": "Expert",
   "settings.masterDifficultyTitle": "Master",
-  "settings.legendaryDifficultyTitle": "Legendary"
+  "settings.legendaryDifficultyTitle": "Legendary",
+  "settings.optionalDebuffsTitle": "Add optional debuffs",
+  "settings.slimedDebuffTitle": "Slimed (-4 speed)",
+  "settings.darknessDebuffTitle": "Darkness",
+  "settings.weaknessDebuffTitle": "Weakness (-20 attack)",
+  "settings.monsterMuskDebuffTitle": "Monster Musk",
+  "settings.nauseatedDebuffTitle": "Nauseated",
+  "settings.tipsyDebuffTitle": "Tipsy (-1 speed)",
+  "settings.burntDebuffTitle": "Burnt (-3 attack, -3 defense, -2 speed)",
+  "settings.spookedDebuffTitle": "Spooked (-8 attack)",
+  "settings.jinxedDebuffTitle": "Jinxed (-8 defense)"
 }
