--- a/HardcoreCombat/i18n/es.json
+++ b/HardcoreCombat/i18n/es.json
@@ -10,5 +10,15 @@
   "settings.advancedDifficultyTitle": "Avanzado",
   "settings.expertDifficultyTitle": "Experto",
   "settings.masterDifficultyTitle": "Master",
-  "settings.legendaryDifficultyTitle": "Legendario"
+  "settings.legendaryDifficultyTitle": "Legendario",
+  "settings.optionalDebuffsTitle": "Añadir debuffs opcionales",
+  "settings.slimedDebuffTitle": "Pringue de baba (-4 velocidad)",
+  "settings.darknessDebuffTitle": "Oscuridad",
+  "settings.weaknessDebuffTitle": "Debilidad (-20 ataque)",
+  "settings.monsterMuskDebuffTitle": "Mejora de almizcle de monstruo",
+  "settings.nauseatedDebuffTitle": "Malestar",
+  "settings.tipsyDebuffTitle": "Un poco alegre (-1 velocidad)",
+  "settings.burntDebuffTitle": "Quemado (-3 ataque, -3 defensa, -2 velocidad)",
+  "settings.spookedDebuffTitle": "Asustado (-8 ataque)",
+  "settings.jinxedDebuffTitle": "Maldición (-8 defensa)"
 }
